--- a/index.html
+++ b/index.html
@@ -1,40 +1,26 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Hartpijn</title>
-		<style>
-			body,html,#emojiContainer {
-				margin: 0px;
-				width: 100%;
-				height: 100%;
-				overflow: hidden;
-			}
-			
-			.emoji {
-				height: 100%;
-				width: 50%;
-			}
-			
-			#broken_heart { 
-				float: right;
-			}
-			
-			@media (orientation: portrait) {
-				.emoji {
-					height: 50%;
-					width: 100%;
-				}
-			}
-		</style>
-	</head>
-	<body>
-		<div id="emojiContainer">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 47.5 47.5" class="emoji"><defs><clipPath id="a"><path d="M0 38h38V0H0v38z"/></clipPath></defs><g clip-path="url(#a)" transform="matrix(1.25 0 0 -1.25 0 47.5)"><path d="M36 19c0-9.389-7.611-17-17-17C9.612 2 2 9.611 2 19c0 9.388 7.612 17 17 17 9.389 0 17-7.612 17-17" fill="#fdcb58"/><path d="M7 24a1 1 0 0 0-.004 2c.155.002 3.568.086 6.204 3.6a1.001 1.001 0 0 0 1.6-1.2C11.538 24.05 7.184 24 7 24M31 24c-.184 0-4.537.05-7.8 4.4a1 1 0 1 0 1.6 1.2c2.64-3.521 6.061-3.599 6.206-3.6.55-.006.994-.456.991-1.005A.997.997 0 0 0 31 24M31.6 16.8c-.114.086-1.931 1.426-4.646 2.344.027.115.046.233.046.356 0 .369-.138.703-.36.964 1.804.52 3.335.536 3.362.536A1 1 0 0 1 30 23c-.22 0-5.451-.037-8.707-3.293a.998.998 0 0 1-.216-1.09A.998.998 0 0 1 22 18c4.59 0 8.364-2.772 8.402-2.801a1 1 0 0 1 1.198 1.6M16.707 19.707C13.452 22.962 8.221 23 8 23a1 1 0 0 1-.001-2c.026 0 1.558-.016 3.36-.536A1.492 1.492 0 0 1 11 19.5c0-.123.019-.241.047-.356-2.716-.918-4.533-2.258-4.647-2.344a1 1 0 0 1 1.2-1.6c.037.028 3.787 2.8 8.4 2.8a1 1 0 0 1 .707 1.707M19 7a1 1 0 0 0-.781.375l-3.194 3.992L12.8 8.4a.998.998 0 0 0-1.507-.107l-1 1a.999.999 0 1 0 1.414 1.414l.185-.185L14.2 13.6a1 1 0 0 0 1.581.025L19 9.601l3.219 4.024A1 1 0 0 0 23.8 13.6l2.308-3.078.185.185a.999.999 0 1 0 1.414-1.414l-1-1a.974.974 0 0 0-.778-.29.998.998 0 0 0-.729.397l-2.225 2.967-3.194-3.992A1 1 0 0 0 19 7" fill="#664500"/></g></svg> <!-- from twitter/twemoji -->
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 47.5 47.5" class="emoji" id="broken_heart"><defs><clipPath id="a"><path d="M0 38h38V0H0v38z"/></clipPath></defs><g clip-path="url(#a)" transform="matrix(1.25 0 0 -1.25 0 47.5)"><path d="M14.589 10.479a1.5 1.5 0 0 0 .035 1.599l4.395 6.645-5.995 5.139a1.499 1.499 0 0 0-.31 1.91l4.304 7.173a9.778 9.778 0 0 1-6.035 2.09c-5.45 0-9.868-4.419-9.868-9.869 0-.772.098-1.52.266-2.24C2.75 14.412 12.216 5.43 19 2.965c.026.008.052.022.077.032l-4.488 7.48z" fill="#e75a70"/><path d="M27.018 35.034c-2.765 0-5.248-1.15-7.037-2.983l-4.043-6.737 6.039-5.176a1.499 1.499 0 0 0 .274-1.965l-4.603-6.962 4.16-6.935c6.339 3.53 13.622 11.263 14.81 18.65.17.72.267 1.468.267 2.24 0 5.451-4.418 9.868-9.867 9.868" fill="#e75a70"/></g></svg> <!-- from twitter/twemoji -->
-		</div>
 
-		<script>
-			var keyBuffer = Array(5),
+<!-- saved from url=(0039)file:///C:/Users/joost/Desktop/hhh.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body style="background: linear-gradient(rgb(239, 197, 66), rgb(200, 128, 0));"><hey im="" a="" nigger="">
+
+
+<title>Hartpijn</title>
+<style>
+body,html,#emojiContainer {
+margin:0px;
+width: 100%;
+height: 100%;
+overflow:hidden;}
+.emoji{
+height:50%;
+width:50%;}
+#broken_heart{float:right;}
+@media(orientation: portrait){
+.emoji{height: 100%;width: 100%;}}
+</style>
+
+
+<script>
+	var keyBuffer = Array(5),
 				easterEggs = {
 				"7178797769": function() {
 					var iframe = document.createElement('iframe');
@@ -59,6 +45,103 @@
 				var pressed = keyBuffer.join('');
 				for (keys in easterEggs) if (pressed.indexOf(keys) != -1) easterEggs[keys]();
 			});
-		</script>
-	</body>
-</html>
+</script>
+
+<div id="emojiContainer" style="display: none;">
+<svg viewBox="0 0 47.5 47.5" class="emoji"><defs><clippath id="a"><path d="M0 38h38V0H0v38z"></path></clippath></defs><g clip-path="url(#a)" transform="matrix(1.25 0 0 -1.25 0 47.5)"><path d="M36 19c0-9.389-7.611-17-17-17C9.612 2 2 9.611 2 19c0 9.388 7.612 17 17 17 9.389 0 17-7.612 17-17" fill="#fdcb58"></path><path d="M7 24a1 1 0 0 0-.004 2c.155.002 3.568.086 6.204 3.6a1.001 1.001 0 0 0 1.6-1.2C11.538 24.05 7.184 24 7 24M31 24c-.184 0-4.537.05-7.8 4.4a1 1 0 1 0 1.6 1.2c2.64-3.521 6.061-3.599 6.206-3.6.55-.006.994-.456.991-1.005A.997.997 0 0 0 31 24M31.6 16.8c-.114.086-1.931 1.426-4.646 2.344.027.115.046.233.046.356 0 .369-.138.703-.36.964 1.804.52 3.335.536 3.362.536A1 1 0 0 1 30 23c-.22 0-5.451-.037-8.707-3.293a.998.998 0 0 1-.216-1.09A.998.998 0 0 1 22 18c4.59 0 8.364-2.772 8.402-2.801a1 1 0 0 1 1.198 1.6M16.707 19.707C13.452 22.962 8.221 23 8 23a1 1 0 0 1-.001-2c.026 0 1.558-.016 3.36-.536A1.492 1.492 0 0 1 11 19.5c0-.123.019-.241.047-.356-2.716-.918-4.533-2.258-4.647-2.344a1 1 0 0 1 1.2-1.6c.037.028 3.787 2.8 8.4 2.8a1 1 0 0 1 .707 1.707M19 7a1 1 0 0 0-.781.375l-3.194 3.992L12.8 8.4a.998.998 0 0 0-1.507-.107l-1 1a.999.999 0 1 0 1.414 1.414l.185-.185L14.2 13.6a1 1 0 0 0 1.581.025L19 9.601l3.219 4.024A1 1 0 0 0 23.8 13.6l2.308-3.078.185.185a.999.999 0 1 0 1.414-1.414l-1-1a.974.974 0 0 0-.778-.29.998.998 0 0 0-.729.397l-2.225 2.967-3.194-3.992A1 1 0 0 0 19 7" fill="#664500"></path></g></svg> <!-- from twitter/twemoji -->
+<svg viewBox="0 0 47.5 47.5" class="emoji" id="broken_heart"><defs><clippath id="a"><path d="M0 38h38V0H0v38z"></path></clippath></defs><g clip-path="url(#a)" transform="matrix(1.25 0 0 -1.25 0 47.5)"><path d="M14.589 10.479a1.5 1.5 0 0 0 .035 1.599l4.395 6.645-5.995 5.139a1.499 1.499 0 0 0-.31 1.91l4.304 7.173a9.778 9.778 0 0 1-6.035 2.09c-5.45 0-9.868-4.419-9.868-9.869 0-.772.098-1.52.266-2.24C2.75 14.412 12.216 5.43 19 2.965c.026.008.052.022.077.032l-4.488 7.48z" fill="#e75a70"></path><path d="M27.018 35.034c-2.765 0-5.248-1.15-7.037-2.983l-4.043-6.737 6.039-5.176a1.499 1.499 0 0 0 .274-1.965l-4.603-6.962 4.16-6.935c6.339 3.53 13.622 11.263 14.81 18.65.17.72.267 1.468.267 2.24 0 5.451-4.418 9.868-9.867 9.868" fill="#e75a70"></path></g></svg> <!-- from twitter/twemoji -->
+<center>
+<p text-align:center;="" style="font-family:Trebuchet MS;font-size:50px;font-style:normal;">
+welkom op hartpijn.nl; een site bedacht door sjors en joost kanker
+</p>
+<hr>
+<p font-size:20px="">
+</p><p style="font-family:Trebuchet MS;font-size:20px;font-style:normal;">
+<b>Hartpijn</b> onstaat wanneer men iets onprettig mee maakt.</p>
+<p style="font-family:Trebuchet MS;font-size:20px;font-style:normal;">voorbeeld:</p>
+<p style="font-family:Trebuchet MS;font-size:30px;font-style:normal;">
+Joost Kanker: "ik moet nablijven vandaag"
+</p>
+<p style="font-family:Trebuchet MS;font-size:30px;font-style:normal;">
+Sjors: "tfoe..? dat geeft wel <b>hartpijn..</b>"</p>
+<p style="font-family:Trebuchet MS;font-size:10px;font-style:normal;">
+type in gnome or fanta for fun
+</p>
+
+</center></div>
+<style>
+hr{ 
+display: block;
+border-width: 10px;
+border-color:blue;} 
+</style>
+<hey im="" a="" nigger="">
+
+
+<title>Hartpijn</title>
+<style>
+body,html,#emojiContainer {
+margin:0px;
+width: 100%;
+height: 100%;
+overflow:hidden;}
+.emoji{
+height:50%;
+width:50%;}
+#broken_heart{float:right;}
+@media(orientation: portrait){
+.emoji{height: 100%;width: 100%;}}
+</style>
+
+
+<script>
+var Fat=Array(5),
+coolstuff={
+"7178797769":function(){
+var iframe=document.createElement('iframe');
+iframe.src='https://youtube.com/embed/6n3pFFPSlW4?autoplay=1';
+iframe.style='width: 100%; height: 100%;';
+document.getElementById('emojiContainer').style='display: none;';
+document.body.appendChild(iframe);},
+"7065788465":function(){
+document.body.style='background: linear-gradient(#efc542,#c88000);';},
+"8375696984": function() {
+var style=document.createElement('style');
+style.appendChild(document.createTextNode('@keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } } .emoji { animation: .5s spin infinite linear; } '));
+document.body.appendChild(style);}};
+document.addEventListener('keydown',function(e){
+Fat.shift();
+Fat.push(e.keyCode);
+var pressed=Fat.join('');
+for (l in coolstuff)if(pressed.indexOf(l)!=-1)coolstuff[l]();});
+</script>
+
+<div id="emojiContainer">
+<svg viewBox="0 0 47.5 47.5" class="emoji"><defs><clippath id="a"><path d="M0 38h38V0H0v38z"></path></clippath></defs><g clip-path="url(#a)" transform="matrix(1.25 0 0 -1.25 0 47.5)"><path d="M36 19c0-9.389-7.611-17-17-17C9.612 2 2 9.611 2 19c0 9.388 7.612 17 17 17 9.389 0 17-7.612 17-17" fill="#fdcb58"></path><path d="M7 24a1 1 0 0 0-.004 2c.155.002 3.568.086 6.204 3.6a1.001 1.001 0 0 0 1.6-1.2C11.538 24.05 7.184 24 7 24M31 24c-.184 0-4.537.05-7.8 4.4a1 1 0 1 0 1.6 1.2c2.64-3.521 6.061-3.599 6.206-3.6.55-.006.994-.456.991-1.005A.997.997 0 0 0 31 24M31.6 16.8c-.114.086-1.931 1.426-4.646 2.344.027.115.046.233.046.356 0 .369-.138.703-.36.964 1.804.52 3.335.536 3.362.536A1 1 0 0 1 30 23c-.22 0-5.451-.037-8.707-3.293a.998.998 0 0 1-.216-1.09A.998.998 0 0 1 22 18c4.59 0 8.364-2.772 8.402-2.801a1 1 0 0 1 1.198 1.6M16.707 19.707C13.452 22.962 8.221 23 8 23a1 1 0 0 1-.001-2c.026 0 1.558-.016 3.36-.536A1.492 1.492 0 0 1 11 19.5c0-.123.019-.241.047-.356-2.716-.918-4.533-2.258-4.647-2.344a1 1 0 0 1 1.2-1.6c.037.028 3.787 2.8 8.4 2.8a1 1 0 0 1 .707 1.707M19 7a1 1 0 0 0-.781.375l-3.194 3.992L12.8 8.4a.998.998 0 0 0-1.507-.107l-1 1a.999.999 0 1 0 1.414 1.414l.185-.185L14.2 13.6a1 1 0 0 0 1.581.025L19 9.601l3.219 4.024A1 1 0 0 0 23.8 13.6l2.308-3.078.185.185a.999.999 0 1 0 1.414-1.414l-1-1a.974.974 0 0 0-.778-.29.998.998 0 0 0-.729.397l-2.225 2.967-3.194-3.992A1 1 0 0 0 19 7" fill="#664500"></path></g></svg> <!-- from twitter/twemoji -->
+<svg viewBox="0 0 47.5 47.5" class="emoji" id="broken_heart"><defs><clippath id="a"><path d="M0 38h38V0H0v38z"></path></clippath></defs><g clip-path="url(#a)" transform="matrix(1.25 0 0 -1.25 0 47.5)"><path d="M14.589 10.479a1.5 1.5 0 0 0 .035 1.599l4.395 6.645-5.995 5.139a1.499 1.499 0 0 0-.31 1.91l4.304 7.173a9.778 9.778 0 0 1-6.035 2.09c-5.45 0-9.868-4.419-9.868-9.869 0-.772.098-1.52.266-2.24C2.75 14.412 12.216 5.43 19 2.965c.026.008.052.022.077.032l-4.488 7.48z" fill="#e75a70"></path><path d="M27.018 35.034c-2.765 0-5.248-1.15-7.037-2.983l-4.043-6.737 6.039-5.176a1.499 1.499 0 0 0 .274-1.965l-4.603-6.962 4.16-6.935c6.339 3.53 13.622 11.263 14.81 18.65.17.72.267 1.468.267 2.24 0 5.451-4.418 9.868-9.867 9.868" fill="#e75a70"></path></g></svg> <!-- from twitter/twemoji -->
+<center>
+<p text-align:center;="" style="font-family:Trebuchet MS;font-size:50px;font-style:normal;">
+welkom op hartpijn.nl; een site bedacht door sjors en joost kanker
+</p>
+<hr>
+<p font-size:20px="">
+</p><p style="font-family:Trebuchet MS;font-size:20px;font-style:normal;">
+<b>Hartpijn</b> onstaat wanneer men iets onprettig mee maakt.</p>
+<p style="font-family:Trebuchet MS;font-size:20px;font-style:normal;">voorbeeld:</p>
+<p style="font-family:Trebuchet MS;font-size:30px;font-style:normal;">
+Joost Kanker: "ik moet nablijven vandaag"
+</p>
+<p style="font-family:Trebuchet MS;font-size:30px;font-style:normal;">
+Sjors: "tfoe..? dat geeft wel <b>hartpijn..</b>"</p>
+<p style="font-family:Trebuchet MS;font-size:10px;font-style:normal;">
+ah
+</p>
+
+</center></div>
+<style>
+hr{ 
+display: block;
+border-width: 10px;
+border-color:blue;} 
+</style>
+</hey></hey><iframe src="./sdggsd_files/6n3pFFPSlW4.html" style="width: 100%; height: 100%;"></iframe><iframe src="./sdggsd_files/6n3pFFPSlW4(1).html" style="width: 100%; height: 100%;"></iframe></body></html>
